src/test/deca/context/valid/float_return_plus.deca
class A{
float a=2.0;
float method(int x){
int y = 5%2;
return x+y+a;
}
}